work on blog component and

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -83,3 +83,12 @@ header.active{
   z-index: 9999;
   background: #fff;
 }
+
+@media screen and (max-width: 768px) {
+  header .search {
+    display: none;
+  }
+  nav {
+    display: none;
+  }
+}
