--- a/src/index.css
+++ b/src/index.css
@@ -62,9 +62,8 @@ form, .boxItem {
   background: #fff;
 }
 
-@media screen and (max-width: 768px) {
-  nav {
-    display: none;
-  }
+.grid3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 15px;
 }
-  
