--- a/src/components/category/category.css
+++ b/src/components/category/category.css
@@ -2,24 +2,20 @@
   margin-top: 50px;
   position: relative;
 }
-
 .category .box {
   border-radius: 0;
   text-align: center;
 }
-
 .category p {
   text-transform: capitalize;
   font-size: 14px;
   font-weight: 600;
 }
-
 .category img {
   width: 100%;
   height: 250px;
   object-fit: cover;
 }
-
 .category .box::after {
   content: "";
   position: absolute;
@@ -29,12 +25,10 @@
   height: 250px;
   background: rgba(0, 0, 0, 0.5);
 }
-
 .category .box {
   cursor: pointer;
   position: relative;
 }
-
 .category .overlay {
   position: absolute;
   top: 80px;
@@ -44,18 +38,16 @@
   z-index: 2;
   color: #fff;
 }
-
 .category .overlay h4 {
   font-weight: 500;
   color: rgb(253, 246, 126);
 }
-
 .category .overlay p {
   color: #fff;
   font-weight: 300;
   padding: 15px;
 }
-
+/*---------------control-btn-------------*/
 .control-btn button {
   background: white;
   width: 30px;
@@ -85,3 +77,4 @@
 .control-btn .icon {
   font-size: 25px;
 }
+/*---------------control-btn-------------*/
