--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,38 +1,34 @@
 header {
-  background-color: #fff;
+  background: #fff;
   padding: 20px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 8%);
   position: relative;
   z-index: 44;
 }
-
+/* nav */
 nav ul {
   display: flex;
 }
-
 nav a {
   text-transform: capitalize;
   margin-right: 30px;
   color: #000;
 }
-
+/* User */
 .profile {
   margin-left: 30px;
   cursor: pointer;
 }
-
 .profile .image {
   display: flex;
   padding-bottom: 20px;
 }
-
 .profile .image img {
   margin-right: 20px;
 }
-
 .profile button {
   font-size: 17px;
-  font-weight: 600;
+  font-weight: 500;
 }
 .profile img {
   width: 40px;
@@ -40,7 +36,6 @@ nav a {
   border-radius: 50%;
   object-fit: cover;
 }
-
 .openProfile {
   color: #000;
   box-shadow: 0 2px 4px rgb(0 0 0 / 8%);
@@ -48,9 +43,8 @@ nav a {
   top: 80px;
   right: 10px;
   width: 250px;
-  background-color: #fff;
+  background: #fff;
 }
-
 .openProfile .box {
   display: flex;
   align-items: center;
@@ -59,22 +53,18 @@ nav a {
   padding: 5px;
   transition: 0.5s;
 }
-
 .openProfile .icon {
   font-size: 20px;
-  margin-left: 20px;
+  margin-right: 20px;
 }
-
 .openProfile h4 {
   font-size: 15px;
   font-weight: 500;
 }
-
 .openProfile button:hover {
-  background-color: rgba(147, 75, 255, 0.075);
+  background: rgba(147, 75, 255, 0.075);
 }
-
-header.active{
+header.active {
   position: sticky;
   top: 0;
   left: 0;
@@ -83,7 +73,6 @@ header.active{
   z-index: 9999;
   background: #fff;
 }
-
 @media screen and (max-width: 768px) {
   header .search {
     display: none;
